Testing some other things

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
     {% for pic in photo %}
     <h2>{{pic.song_name}}</h2>
     <img src="{{pic.image.url}}" alt="fish" height="20%" width="20%">
+    <img src="{{pic.image1.url}}" alt="image1" height="22%" width="22%">
     
     <div>
         <audio controls style="padding-top: 2%;">
