--- a/templates/upload.html
+++ b/templates/upload.html
@@ -29,6 +29,7 @@
             <label for="upload">Name</label>
             {{form.song_name}}
             {{form.image}}
+            {{form.image1}}
             {{form.song}}
             <input type="submit" value="submit">
         </form>
